@@ -2,14 +2,21 @@ package com.genx.service.Impl;
 
 import com.genx.dto.request.UserRequestDto;
 import com.genx.dto.response.UserResponseDto;
+import com.genx.entity.StaffInfo;
 import com.genx.entity.User;
 import com.genx.enums.ERole;
 import com.genx.mapper.UserMapper;
+import com.genx.repository.StaffInfoRepository;
 import com.genx.repository.UserRepository;
 import com.genx.service.interfaces.IUserService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -19,6 +26,8 @@ public class UserServiceImpl implements IUserService {
 
     private final UserRepository userRepository;
     private final UserMapper userMapper;
+    private final StaffInfoRepository staffInfoRepository;
+    private final PasswordEncoder passwordEncoder;
 
     @Override
     public UserResponseDto createStaff(UserRequestDto dto) {
@@ -30,8 +39,23 @@ public class UserServiceImpl implements IUserService {
             throw new IllegalArgumentException("Email already exists.");
         }
 
+        // Tạo user từ DTO
         User staff = userMapper.toEntity(dto);
+        staff.setPassword(passwordEncoder.encode(dto.getPassword()));
+        staff.setEnabled(true);
+        staff.setAccountNonLocked(true);
+
         User saved = userRepository.save(staff);
+
+        // Luôn tạo StaffInfo
+        StaffInfo info = new StaffInfo();
+        info.setUser(saved);
+        info.setAvatar(dto.getAvatar());
+        info.setFingerprintData(dto.getFingerprintData());
+        info.setStartdDate(dto.getStartDate() != null ? dto.getStartDate() : LocalDateTime.now());
+
+        staffInfoRepository.save(info);
+
         return userMapper.toDTO(saved);
     }
 
@@ -76,12 +100,18 @@ public class UserServiceImpl implements IUserService {
     }
 
     @Override
-    public List<UserResponseDto> getUsersByFilter(ERole role, Boolean enabled, Boolean accountNonLocked) {
-        return userRepository.findAll().stream()
+    public Page<UserResponseDto> getUsersByFilter(ERole role, Boolean enabled, Boolean accountNonLocked, Pageable pageable) {
+        Page<User> page = userRepository.findAll(pageable); // Đảm bảo trả về Page<User>
+
+        List<UserResponseDto> filtered = page.getContent().stream()
                 .filter(u -> role == null || u.getRole() == role)
                 .filter(u -> enabled == null || u.isEnabled() == enabled)
                 .filter(u -> accountNonLocked == null || u.isAccountNonLocked() == accountNonLocked)
                 .map(userMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
+
+        return new PageImpl<>(filtered, pageable, filtered.size());
     }
+
+
 }
